--- a/.github/workflows/artifact.yml
+++ b/.github/workflows/artifact.yml
@@ -18,3 +18,18 @@ jobs:
       with:
         name: hello-artifact
         path: hello.txt
+        
+jobs:
+  download:
+    runs-on: ubuntu-latest
+
+    steps: 
+    - name: Download artifacts
+      uses: actions/download-artifact@v4
+      with:
+        name: hello-artifact
+
+    - name: Display artifact
+      run: cat ./artifacts/hello.txt
+    
+  
