--- a/.github/workflows/artifact.yml
+++ b/.github/workflows/artifact.yml
@@ -17,7 +17,7 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: hello-artifact
-        path: hello.txt
+        path: ./artifacts/hello.txt
         
   
   download:
@@ -30,7 +30,7 @@ jobs:
       with:
         name: hello-artifact
 
-    - name: Display artifact
-      run: cat ./hello.txt
+    - name: Display content of the text file 
+      run: cat ./artifacts/hello.txt
     
   
