--- a/.github/workflows/artifact.yml
+++ b/.github/workflows/artifact.yml
@@ -29,6 +29,7 @@ jobs:
       uses: actions/download-artifact@v4
       with:
         name: hello-artifact
+        path: ./artifacts/hello.txt
 
     - name: Display content of the text file 
       run: cat ./artifacts/hello.txt
