--- a/.github/workflows/artifact.yml
+++ b/.github/workflows/artifact.yml
@@ -32,6 +32,8 @@ jobs:
         path: ./artifacts/hello.txt
 
     - name: Display content of the text file 
-      run: cat ./artifacts/hello.txt
+      run: |
+      cd ./artifacts
+      cat hello.txt
     
   
