--- a/.github/workflows/artifact.yml
+++ b/.github/workflows/artifact.yml
@@ -17,7 +17,7 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: hello-artifact
-        path: ./hello.txt
+        path: ./artifacts
         
   
   download:
@@ -29,11 +29,10 @@ jobs:
       uses: actions/download-artifact@v4
       with:
         name: hello-artifact
-        path: ./artifacts/hello.txt
+        path: ./artifacts
 
     - name: Display content of the text file 
-      run: |
-      cd ./artifacts
-      cat hello.txt
+      run: cat ./artifacts/hello.txt
+      
     
   
